Heri | Updating copyright

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -910,7 +910,7 @@
                             <script>
                                 document.write(new Date().getFullYear())
                             </script>
-                            <a href="https://www.techmada-isolutions.com/" target="blank">Techmada Innovative Solutions</a>
+                            <a href="mailto:hery.imiary@gmail.com">Herihaja</a>
                         </p>
                     </nav>
                 </div>
