--- a/templates/parametre/_form.html.twig
+++ b/templates/parametre/_form.html.twig
@@ -1,14 +1,14 @@
                                      <form name="Parametre" method="post" id="form-Parametre" enctype="multipart/form-data">
-                                                                         <div class="row">
+                                        <div class="row">
                                             <div class="col-md-12">
                                                 <div class="form-group">
-                                                    <label>NomParametre</label>
+                                                    <label>Paramètre</label>
                                                     {{ form_widget(form.nomParametre, {'attr': {'class': 'form-control'}}) }}
                                                     {{ form_errors(form.nomParametre) }}
                                                 </div>
                                             </div>
                                         </div>
-                                                                        <div class="row">
+                                        <div class="row">
                                             <div class="col-md-12">
                                                 <div class="form-group">
                                                     <label>Description</label>
