--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -366,7 +366,15 @@
             }
         });
     </script>
-    {% block javascripts %}{% endblock %}
+    
+        {% block stylesheets %}
+            {{ encore_entry_link_tags('js/app') }}
+        {% endblock %}
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+        {% block javascripts %}
+            {{ encore_entry_script_tags('js/app') }}
+        {% endblock %} 
 </head>
 
 <body>
