Heri | adding enhancement to Prix and Produit

--- a/templates/prix/_form.html.twig
+++ b/templates/prix/_form.html.twig
@@ -1,5 +1,5 @@
                                      <form name="Prix" method="post" id="form-Prix" enctype="multipart/form-data">
-                                        <div class="row">
+                                        <div class="row d-none">
                                             <div class="col-md-12">
                                                 <div class="form-group">
                                                     <label>Produit</label>
