--- a/templates/prix/index.html.twig
+++ b/templates/prix/index.html.twig
@@ -18,6 +18,7 @@
     <table class="table table-hover table-striped" id="liste-table">
         <thead>
             <tr>
+                <th>Unit&eacute;</th>
                         <th>Date ajout</th>
                         <th>Prix</th>
                         <th>Prix d'achat</th>
@@ -27,6 +28,7 @@
         <tbody>
         {% for prix in prixes %}
             <tr>
+                <td>{{ prix.unite }}</td>
                 <td>{{ prix.dateAjout ? prix.dateAjout|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ prix.valeur }}</td>
                 <td>{{ prix.prixAchat }}</td>
