--- a/templates/produit/_form.html.twig
+++ b/templates/produit/_form.html.twig
@@ -44,6 +44,15 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <div class="row">
+                                            <div class="col-md-12">
+                                                <div class="form-group">
+                                                    <label>Unit&eacute;s</label>
+                                                    {{ form_widget(form.unites, {'attr': {'class': 'form-control'}}) }}
+                                                    {{ form_errors(form.unites) }}
+                                                </div>
+                                            </div>
+                                        </div>
                                                                         
                                         <div class="clearfix"></div>
                                         {{ form_widget(form._token) }}
