Heri | Adding first draft for caisse

--- a/templates/dashboard/caisse.html.twig
+++ b/templates/dashboard/caisse.html.twig
@@ -3,7 +3,9 @@
 {% block titre %}Bienvenu à la caisse de {{ app_name }}{% endblock %}
 
 {% block contenu %}
-
+    <script>
+        const produitListUrl = "{{ path('produit_list')|escape('js') }}";
+    </script>
     <form name="Caisse" method="post" id="form-Produit" enctype="multipart/form-data">
         
                                         
@@ -11,20 +13,7 @@
                 <input type="hidden" name="token" value="{{ csrf_token('caisse') }}"/>                    
                                         <div class="clearfix"></div>
 
-    <table class="table table-hover table-striped" id="liste-table">
-        <thead>
-            <tr>
-                        <th>Produit</th>
-                        <th>Prix unitaire</th>
-                        <th>Unité</th>
-                         <th>Total</th>
-                    
-            </tr>
-        </thead>
-        <tbody>
-        
-        </tbody>
-    </table>
+    
                                         
                                     </form>
                                         {% include "save-button.html.twig" %}
