--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -241,6 +241,11 @@
           #accounttab{
             background: transparent !important;
           }
+
+        img.deleteProduit{
+          width: 12px; 
+          margin-top: -5px;
+        }
         
     </style>
 
@@ -250,7 +255,7 @@
 
             /* Initialize datable with French language activated by default */
             BTQ.dt = $('#liste-table, .liste-table').DataTable({
-                language: {url: "/static/js/datatable-French.json"},
+                //language: {url: "/static/js/datatable-French.json"},
             });
             
                 
