--- a/templates/utilisateur/new.html.twig
+++ b/templates/utilisateur/new.html.twig
@@ -4,7 +4,7 @@
 
 
 {% block breadcrumb %}
-    {% set breadcrumb = {'main': app_name, (path('utilisateur_index')): 'Utilisateurs' , 'no-link': block('titre')} %}
+    {% set breadcrumb = {'main': app_name, (path('utilisateur_index')): 'Gestion utilisateurs' , 'no-link': block('titre')} %}
     {% include "breadcrumb.html.twig" %}
 {% endblock %}
 
