--- a/templates/dashboard/caisse.html.twig
+++ b/templates/dashboard/caisse.html.twig
@@ -14,10 +14,18 @@
                                         <div class="clearfix"></div>
                     <div id="AchatItem-list">
                     </div>
+                                        
+                   
     
-                                     <input type="submit" value="Enregistrer"/>   
+                                       
+                                     <div class="row save-button" >
+                                            <div class="col-md-12">
+                                                <button type="submit" class="btn btn-info btn-fill pull-right save-btn">Enregistrer</button>
+                                            </div>
+                                        </div>
+
                                     </form>
-                                        {% include "save-button.html.twig" %}
+                                        
 
 
     
