Heri | Renaming Achat to Mouvement

--- a/templates/dashboard/caisse.html.twig
+++ b/templates/dashboard/caisse.html.twig
@@ -12,7 +12,7 @@
                                         
                 <input type="hidden" name="token" value="{{ csrf_token('caisse') }}"/>                    
                                         <div class="clearfix"></div>
-                    <div id="AchatItem-list">
+                    <div id="MouvementItem-list">
                     </div>
                                         
                    
