Heri | Adding appro feature

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -394,7 +394,7 @@
             <div class="sidebar-wrapper">
                 <div class="logo" align="center">
                   <a href="{{ path('dashboard') }}">
-			              <img src="/static/img/server_white.png" height="40px"> <img src="/static/img/logo_inddl.jpg">                    
+			              <img src="/static/img/server_white.png" height="40px"> <img src="/static/img/logo.jpg">                    
                   </a>
                 </div>
                 <ul class="nav" id="mainNav">
