Heri | Parametre valeur crud per parameter

--- a/templates/parametre_valeur/edit.html.twig
+++ b/templates/parametre_valeur/edit.html.twig
@@ -2,4 +2,4 @@
 
 {% set delete_button="parametre_valeur/_delete_form.html.twig" %}
 
-{% block titre %}Modifier une valeur (Paramètre){% endblock %}
+{% block titre %}Modifier un(e) {{parametre|lower}}{% endblock %}
