--- a/templates/parametre_valeur/_form.html.twig
+++ b/templates/parametre_valeur/_form.html.twig
@@ -1,6 +1,6 @@
                                      <form name="ParametreValeur" method="post" id="form-ParametreValeur" enctype="multipart/form-data">
                                         
-                                        <div class="row">
+                                        <div class="row d-none">
                                             <div class="col-md-12">
                                                 <div class="form-group">
                                                     <label>Paramètre</label>
