--- a/templates/parametre_valeur/index.html.twig
+++ b/templates/parametre_valeur/index.html.twig
@@ -1,10 +1,12 @@
 {% extends 'base-breadcrumb.html.twig' %}
 
-{% block titre %}Liste des valeurs (paramètre){% endblock %}
+{% block titre %}{{ parametre }} {% endblock %}
 
 
 {% block breadcrumb %}
-    {% set breadcrumb = {'main': app_name, 'no-link': block('titre')} %}
+    {% set breadcrumb = {'main': app_name, 
+        'root': 'Administration',    
+    'no-link': block('titre')} %}
     {% include "breadcrumb.html.twig" %}
 {% endblock %}
 
@@ -40,5 +42,5 @@
 {% endblock %}
 
 {% block add_button %}
-                        <button type="submit" class="btn btn-info btn-fill pull-right add-btn" onclick="location.href='{{ path('parametre_valeur_new') }}'">Ajouter une valeur (paramètre)</button>
+                        <button type="submit" class="btn btn-info btn-fill pull-right add-btn" onclick="location.href='{{ path('parametre_valeur_new', {'id': parametre.id}) }}'">Ajouter un(e) {{parametre|lower}}</button>
 {% endblock %}
