--- a/templates/parametre_valeur/new.html.twig
+++ b/templates/parametre_valeur/new.html.twig
@@ -1,10 +1,13 @@
 {% extends 'base-breadcrumb.html.twig' %}
 
-{% block titre %}Ajouter une valeur (paramètre){% endblock %}
+{% block titre %}Ajouter un(e) {{parametre|lower}}{% endblock %}
 
 
 {% block breadcrumb %}
-	{% set breadcrumb = {'main': app_name, (path('parametre_valeur_index')): 'Parametres et valeurs' , 'no-link': 		block('titre')} %}
+	{% set breadcrumb = {'main': app_name, 
+		'root': 'Administration', 
+		(path('parametre_valeur_index', {'id': parametre.id})): parametre , 
+		'no-link': 		block('titre')} %}
 	{% include "breadcrumb.html.twig" %}
 {% endblock %}
 
