Heri | Adding some cleanup...

--- a/templates/parametre/edit.html.twig
+++ b/templates/parametre/edit.html.twig
@@ -2,4 +2,4 @@
 
 {% set delete_button="parametre/_delete_form.html.twig" %}
 
-{% block titre %}Modifier Parametre{% endblock %}
+{% block titre %}Modifier un paramètre{% endblock %}
