--- a/templates/parametre/index.html.twig
+++ b/templates/parametre/index.html.twig
@@ -1,15 +1,14 @@
 {% extends 'base-breadcrumb.html.twig' %}
 
-{% block title %}Parametre index{% endblock %}
-
-{% block titre %}Liste des Parametres{% endblock %}
+{% block titre %}Liste des paramètres{% endblock %}
 
 
 {% block breadcrumb %}
-    {% set breadcrumb = {'main': app_name, 'no-link': block('titre')} %}
+    {% set breadcrumb = {'main': app_name, 
+        'root': 'Administration',    
+    'no-link': block('titre')} %}
     {% include "breadcrumb.html.twig" %}
 {% endblock %}
-
 {% block class_title_icon %}nc-icon nc-notes{% endblock %}
 
 {% block contenu %}
@@ -38,5 +37,5 @@
 {% endblock %}
 
 {% block add_button %}
-                        <button type="submit" class="btn btn-info btn-fill pull-right add-btn" onclick="location.href='{{ path('parametre_new') }}'">Ajouter Parametre</button>
+                        <button type="submit" class="btn btn-info btn-fill pull-right add-btn" onclick="location.href='{{ path('parametre_new') }}'">Ajouter un paramètre</button>
 {% endblock %}
