--- a/templates/produit/appro.html.twig
+++ b/templates/produit/appro.html.twig
@@ -14,7 +14,7 @@
     <script>
         const produitListUrl = "{{ path('produit_list')|escape('js') }}";
     </script>
-    <form name="Appro" method="post" id="form-Produit" enctype="multipart/form-data" action="/approvisionnement">
+    <form name="Appro" method="post" id="form-Produit" enctype="multipart/form-data" action="{{ path('approvisionnement') }}">
         
                                         
                                         
