--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -399,6 +399,13 @@
                 </div>
                 <ul class="nav" id="mainNav">
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ path('caisse') }}">
+                         <i class="nc-icon nc-support-17"></i> 
+                         <p>Caisse</p>
+                            <b class="caret"></b>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" data-toggle="collapse" href="#rc-collapse-components">
                          <i class="nc-icon nc-support-17"></i> 
                          <p>Produit</p>
