--- a/templates/unite_relation/_form.html.twig
+++ b/templates/unite_relation/_form.html.twig
@@ -1,4 +1,11 @@
 <form name="Prix" method="post" id="form-Prix" enctype="multipart/form-data">
+    <div class="row">
+        <div class="col-12">
+
+            {{ form_errors(form)}}
+        </div>
+    </div>
+
     <div class="row d-none">
         <div class="col-md-12">
             <div class="form-group">
@@ -11,6 +18,7 @@
     <div class="row">
         <div class="col-4">
             <div class="form-group">
+
                 {{ form_widget(form.unite1, {'attr': {'class': 'form-control'}}) }}
                 {{ form_errors(form.unite1) }}
             </div>
