--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -400,14 +400,14 @@
                 <ul class="nav" id="mainNav">
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('caisse') }}">
-                         <i class="nc-icon nc-support-17"></i> 
+                         <i class="nc-icon nc-cart-simple"></i> 
                          <p>Caisse</p>
                             <b class="caret"></b>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="collapse" href="#rc-collapse-components">
-                         <i class="nc-icon nc-support-17"></i> 
+                         <i class="nc-icon nc-layers-3"></i> 
                          <p>Produit</p>
                             <b class="caret"></b>
                         </a>
@@ -415,20 +415,20 @@
                           <ul class="nav">
                             <li class="nav-item">
                               <a class="nav-link" href="{{ path('produit_stock') }}">
-                                <i class="nc-icon nc-badge"></i>   
+                                <i class="nc-icon nc-bullet-list-67"></i>   
                                 <span class="sidebar-normal"> Stock </span>
                               </a>
                             </li>
                             <li class="nav-item ">
                                 <a class="nav-link" href="{{ path('approvisionnement') }}">
-                                <i class="nc-icon nc-check-2"></i>     
+                                <i class="nc-icon nc-delivery-fast"></i>     
                                 <span class="sidebar-normal"> Approvisionnement </span>
                               </a>
                             </li>
 
                             <li class="nav-item ">
                               <a class="nav-link" href="{{ path('produit_index') }}">
-                              <i class="nc-icon nc-check-2"></i>     
+                              <i class="nc-icon nc-app"></i>     
                               <span class="sidebar-normal"> Gestion produit </span>
                             </a>
                           </li>
@@ -449,20 +449,20 @@
                           <ul class="nav">
                             <li class="nav-item ">
                                 <a class="nav-link" href="{{ path('parametre_valeur_index', {'id': 1}) }}">
-                                    <i class="nc-icon nc-bank"></i>
+                                    <i class="nc-icon nc-chart-pie-35"></i>
                                     <span class="sidebar-normal">Catégorie produit</span>
                               </a>
                             </li>  
                             <li class="nav-item ">
                                 <a class="nav-link" href="{{ path('parametre_valeur_index', {'id': 2}) }}">
-                                    <i class="nc-icon nc-globe-2"></i>
+                                    <i class="nc-icon nc-chart"></i>
                                     <span class="sidebar-normal"> Type produit </span>
                               </a>
                             </li>
 
                             <li class="nav-item ">
                               <a class="nav-link" href="{{ path('parametre_valeur_index', {'id': 3}) }}">
-                                  <i class="nc-icon nc-globe-2"></i>
+                                  <i class="nc-icon nc-explore-2"></i>
                                   <span class="sidebar-normal"> Unité produit </span>
                             </a>
                           </li>
