--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -37,6 +37,11 @@
                 series: JSON.parse('{{ frequenceVente[0] | json_encode | raw }}')
             };
 
+            var stockData = {
+                labels: ["{{ stockAndSales[1]|raw }}"],
+                series: JSON.parse('{{ stockAndSales[0] | json_encode | raw }}')
+            };
+
             var options = {
                 seriesBarDistance: 30,
                 animationEnabled: true,
@@ -55,8 +60,8 @@
                 }]
             ];
 
-            var chart = new Chartist.Bar('#rhBar', data, options, responsiveOptions);
-            chart.on('draw', function(data) {
+            const drawBar = (data) => {
+                
                 if(data.type == 'bar') {
                     data.element.animate({
                         y2: {
@@ -66,7 +71,13 @@
                         }
                     });
                 }
-            });
+            }
+
+            var chart = new Chartist.Bar('#frequenceVente', data, options, responsiveOptions);
+            chart.on('draw', drawBar);
+
+            var chart = new Chartist.Bar('#stockAndSales', stockData, options, responsiveOptions);
+            chart.on('draw', drawBar);
             /*
             chart.on('draw', function(data) {
                 if(data.type === 'slice') {
@@ -123,10 +134,12 @@
 
     <div id="agentsPie">
     </div>
-    <b>Fréquence des ventes:</b>
-    <div id="rcPie">
+    <b>Fréquence de ventes (Les 30 derniers jours):</b>
+    <div id="frequenceVente">
     </div>
-    <div id="rhBar">
+    <br/><br/>
+    <b>Comparaison stock et vente (Les 7 derniers jours):</b>
+    <div id="stockAndSales">
     </div>
 </div>
 {% endblock %}
