--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -28,6 +28,10 @@
                     return value
                 },
                 height: 200,
+                axisY: {
+                    // Lets offset the chart a bit from the labels
+                    offset: 70
+                }
 	        };
             //Chartist.Pie('#agentsPie', agentsData, pieOptions );
             //Chartist.Pie('#rcPie', rcData, pieOptions );
@@ -47,7 +51,11 @@
                 animationEnabled: true,
                 plugins: [Chartist.plugins.legend({
                     position: 'bottom'
-                })]
+                })],
+                axisY: {
+                    // Lets offset the chart a bit from the labels
+                    offset: 70
+                }
             };
             var responsiveOptions = [
                 ['screen and (max-width: 640px)', {
@@ -60,7 +68,7 @@
                 }]
             ];
 
-            const drawBar = (data) => {
+            const drawFunction = (data) => {
                 
                 if(data.type == 'bar') {
                     data.element.animate({
@@ -71,13 +79,58 @@
                         }
                     });
                 }
+                if (data.type === 'line') {
+                    data.element.animate({
+                        opacity: {
+                            dur: 1000,
+                            from: 0,
+                            to: 1
+                        },
+                        x1: {
+                            dur: '1000ms',
+                            from: 100,
+                            to: 200,
+                            easing: 'easeOutQuart'
+                        },
+                        y1: {
+                            dur: '2s',
+                            from: 0,
+                            to: 100
+                        }
+                    });
+                }
             }
 
             var chart = new Chartist.Bar('#frequenceVente', data, options, responsiveOptions);
-            chart.on('draw', drawBar);
+            chart.on('draw', drawFunction);
 
             var chart = new Chartist.Bar('#stockAndSales', stockData, options, responsiveOptions);
-            chart.on('draw', drawBar);
+            chart.on('draw', drawFunction);
+
+            var salesData = {
+                labels: ["{{ salesData[1]|raw }}"],
+                series: JSON.parse('{{ salesData[0] | json_encode | raw }}')
+            };
+
+            var chart  = new Chartist.Line('#salesChart', salesData, {
+                low: 0,
+                showArea: true,
+                axisY: {
+                    // Lets offset the chart a bit from the labels
+                    offset: 70,
+                    // The label interpolation function enables you to modify the values
+                    // used for the labels on each axis. Here we are converting the
+                    // values into million pound.
+                    labelInterpolationFnc: function(value) {
+                        //if (value > 1000)
+                        //    return '' + (value/1000) + 'm';
+                        return value;
+                    }
+                }
+            });
+            chart.on('draw', drawFunction);
+
+
             /*
             chart.on('draw', function(data) {
                 if(data.type === 'slice') {
@@ -131,9 +184,10 @@
 
 <div class="example-wrapper">
     
-
-    <div id="agentsPie">
+    <b>CA journalier:</b>
+    <div id="salesChart">
     </div>
+    <br/><br/>
     <b>Fréquence de ventes (Les 30 derniers jours):</b>
     <div id="frequenceVente">
     </div>
