--- a/templates/breadcrumb.html.twig
+++ b/templates/breadcrumb.html.twig
@@ -1,7 +1,7 @@
                                 <nav aria-label="breadcrumb">
                                     <ol class="breadcrumb">
                                     {% for key, value in breadcrumb %}
-                                        {% if key in ['main', 'no-link', 'root'] %}
+                                        {% if key in ['main', 'no-link', 'root', 'no-link2'] %}
                                         <li class="breadcrumb-item"><a href="javascript:void(0);">{{ value }}</a></li>
                                         {% else %}
                                         <li class="breadcrumb-item"><a href="{{ key }}">{{ value }}</a></li>
