--- a/templates/produit/appro.html.twig
+++ b/templates/produit/appro.html.twig
@@ -3,9 +3,8 @@
 {% block titre %}Approvisionnement{% endblock %}
 
 {% block breadcrumb %}
-    {% set breadcrumb = {'root': app_name,
-            (path('produit_index')) : 'Produits' , 
-            'no-link': block('titre')} %}
+    {% set breadcrumb = {'main': app_name, 'root': 'Produit',
+        'no-link': block('titre')} %}
     {% include "breadcrumb.html.twig" %}
 {% endblock %}
 
