--- a/templates/produit/edit.html.twig
+++ b/templates/produit/edit.html.twig
@@ -5,9 +5,9 @@
 {% block titre %}Modifier un produit{% endblock %}
 
 {% block breadcrumb %}
-    {% set breadcrumb = {'root': app_name,
-            (path('produit_index')) : 'Produits' , 
-            'no-link': block('titre')} %}
+    {% set breadcrumb = {'main': app_name, 'root': 'Produit',
+        (path('produit_index')) : 'Gestion produit' , 
+        'no-link': block('titre')} %}
     {% include "breadcrumb.html.twig" %}
 {% endblock %}
 
