--- a/templates/produit/new.html.twig
+++ b/templates/produit/new.html.twig
@@ -4,7 +4,9 @@
 
 
 {% block breadcrumb %}
-	{% set breadcrumb = {'main': app_name, (path('produit_index')): 'Produits' , 'no-link': 		block('titre')} %}
+	{% set breadcrumb = {'main': app_name, 'root': 'Produit',
+		(path('produit_index')) : 'Gestion produit' , 
+		'no-link': block('titre')} %}
 	{% include "breadcrumb.html.twig" %}
 {% endblock %}
 
