--- a/templates/utilisateur/new.html.twig
+++ b/templates/utilisateur/new.html.twig
@@ -4,7 +4,11 @@
 
 
 {% block breadcrumb %}
-    {% set breadcrumb = {'main': app_name, (path('utilisateur_index')): 'Gestion utilisateurs' , 'no-link': block('titre')} %}
+    {% set breadcrumb = {
+        'root': app_name, 
+        'main': 'Administration système',
+        (path('utilisateur_index')): 'Gestion des utilisateurs' , 
+        'no-link': block('titre')} %}
     {% include "breadcrumb.html.twig" %}
 {% endblock %}
 
